plugins {
    id 'application'
    id 'idea'
}

group = 'io.github.jwharm.puzzlegame'
version = '0.1'

repositories {
    mavenCentral()
}

idea {
    module {
        downloadSources = true
    }
}

dependencies {
    implementation 'io.github.jwharm.javagi:adw:0.9.0'
    implementation 'io.github.jwharm.cairobindings:cairo:1.18.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('compileJava', JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.named('run', JavaExec) {
    jvmArgs += '--enable-preview'
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
    jvmArgs += '-Djava.library.path=C:/dev/msys64/mingw64/bin'
}

application {
    mainClass = 'io.github.jwharm.puzzlegame.Main'
}
